# GitMind

./: .env.example  .gitignore  README.md  WTF_I_BRAINSTORMED.md  cli.py  config.sample.py  main.py  pyproject.toml
agents/: __init__.py
agents/code/: code_agent.py  sys_prompt.yaml
agents/docs/: docs_agent.py  sys_prompt.yaml
agents/github/: github_agent.py  sys_prompt.yaml
agents/history/: history_agent.py  sys_prompt.yaml
agents/project/: __init__.py  project_agent.py  sys_prompt.yaml
agents/recovery/: recovery_agent.py  sys_prompt.yaml
agents/suggest/: suggest_agent.py  sys_prompt.yaml
data/: __init__.py  database.py  models.py
embeddings/: __init__.py  vector_store.py
github/: __init__.py  github_client.py  github_tools.py
github_integration/: __init__.py  github_client.py  github_tools.py
tests/: .env.sample
tools/: __init__.py  code_tools.py  git_tools.py
tools/story/: __init__.py  get_commits.py  quick_overview.py  story_generator.py
utils/: __init__.py  banner.py  output.py
workflows/: __init__.py  orchestrator.py  router.py  synthesizer.py
