[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitmind"
version = "0.1.0"
description = "Understand your repository's past, present, and future."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Aditya Shukla", email = "adityashukla.sm26@gmail.com" }
]

maintainers = [
    { name = "Aditya Shukla", email = "adityashukla.sm26@gmail.com" }
]

keywords = [
    "git",
    "repository",
    "history",
    "analysis",
    "visualization",
    "version-control"
]

dependencies = [
    "typer>=0.16.0",
    "GitPython>=3.1.45",
    "langgraph>=0.6.0",
    "llama-index>=0.14.22",
    "langsmith>=0.4.0",
    "python-dotenv>=1.1.0",
    "chromadb>=1.5.9",
    "tree-sitter>=0.25.0",
    "rich-pyfiglet>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/vastavikadi/gitmind"
Repository = "https://github.com/vastavikadi/gitmind"